# baby-plonk-rust

./: Cargo.toml  README.md
.cargo/: config
lib/bls12_381/src/: lib.rs  scalar.rs
src/: assembly.rs  lib.rs  msm.rs  polynomial.rs  program.rs  prover.rs  setup.rs  transcript.rs  utils.rs  verifier.rs
tests/: verify_proof_test.rs
