[package]
name = "baby-plonk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = {path = "lib/bls12_381"}

group = "0.13.0"
regex = "1"
ff = "0.13.0"
merlin = "3.0.0"
rand = "0.8.5"
[workspace]
members = [
    "lib/bls12_381",
]
